<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:contentDescription="@string/arrow_back"
            app:titleTextColor="@color/black"
            tools:ignore="MissingConstraints"
            tools:title="Taj Mahal" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userPicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/user_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:shapeAppearanceOverlay="@style/CircularShape" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/userPicture"
            app:layout_constraintTop_toTopOf="@id/userPicture"
            tools:text="Manon Garcia" />

        <RatingBar
            android:id="@+id/userRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/yellow"
            android:rating="1.0"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:stepSize="1.0"
            app:layout_constraintStart_toStartOf="@id/userName"
            app:layout_constraintTop_toBottomOf="@id/userName" />

        <Button
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/red"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/validate"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <EditText
            android:id="@+id/userReviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_border"
            android:gravity="top"
            android:hint="@string/share_your_experience"
            android:inputType=""
            android:minHeight="60dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPicture"
            tools:ignore="RtlSymmetry" />


        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0.75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="#DADADA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userReviewText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            tools:listitem="@layout/reviews" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>